# verteilte_systeme

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  docker_test_script.sh  log.txt  main.py  pyproject.toml  test_script.bash
Beispiel-Logs/: client-floor-log.txt  client-hash-log.txt  client-reverse-log.txt  client-softmax-log.txt  client-strlen-log.txt  client-sum-log.txt  dispatcher-log.txt  floor-worker.txt  hash-worker.txt  nameserver-log.txt  reverse-worker.txt  softmax-worker.txt  strlen-worker.txt  sum-worker.txt
dockerfiles/: client.Dockerfile  dispatcher.Dockerfile  nameserver.Dockerfile  worker.Dockerfile
img/: components.puml  sequence_task.puml
src/common/protos/: common.proto  dispatcher.proto  nameserver.proto  worker.proto
src/common/rpc/: common.proto  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  dispatcher.proto  dispatcher_pb2.py  dispatcher_pb2.pyi  dispatcher_pb2_grpc.py  nameserver.proto  nameserver_pb2.py  nameserver_pb2.pyi  nameserver_pb2_grpc.py  worker.proto  worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
src/common/rpc/services/: dispatcher_pb2_grpc.py  nameserver_pb2_grpc.py  worker_pb2_grpc.py
src/common/rpc/types/: common_pb2.py  common_pb2.pyi  dispatcher_pb2.py  dispatcher_pb2.pyi  nameserver_pb2.py  nameserver_pb2.pyi  (+1 more)
src/services/: __init__.py
src/services/client/: __init__.py  client.py
src/services/dispatcher/: __init__.py  server.py  service.py
src/services/nameserver/: __init__.py  server.py  service.py
src/services/worker/: __init__.py  common.py  server.py  service.py  tasks.py
